JumpScript/tests/baselines/reference/propertyAccessibility1.errors.txt
tests/cases/compiler/propertyAccessibility1.jump(5,3): error TS2341: Property 'privProp' is private and only accessible within class 'Foo'.


==== tests/cases/compiler/propertyAccessibility1.jump (1 errors) ====
    class Foo {
      private privProp = 0;
    }
    var f = new Foo();
    f.privProp;
      ~~~~~~~~
!!! error TS2341: Property 'privProp' is private and only accessible within class 'Foo'.
    